--- a/package.json
+++ b/package.json
@@ -67,16 +67,16 @@
     "@npmcli/ci-detect": "^3.0.2",
     "@types/cross-spawn": "^6.0.2",
     "@types/eslint": "^8.37.0",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.1",
     "@types/mri": "^1.1.1",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.15.13",
     "@types/npmcli__ci-detect": "^2.0.0",
     "@types/prettier": "2.7.2",
     "@types/semver": "^7.3.13",
     "@types/which": "^3.0.0",
     "admina": "^0.1.3",
     "caxa": "^3.0.1",
-    "ci-log": "workspace:1.0.0",
+    "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
     "cspell": "^6.31.1",
@@ -85,26 +85,26 @@
     "escape-string-regexp": "^5.0.0",
     "eslint": "^8.38.0",
     "eslint-config-atomic": "^1.18.3",
-    "exec-powershell": "workspace:1.0.0",
+    "exec-powershell": "workspace:*",
     "execa": "^5.1.1",
     "gen-readme": "^1.6.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.5.0",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
-    "npm-check-updates": "^16.10.8",
+    "npm-check-updates": "^16.10.9",
     "npm-run-all2": "^6.0.5",
     "numerous": "1.0.3",
     "parcel": "2.8.3",
     "path-exists": "^4.0.0",
     "patha": "^0.4.1",
-    "prettier": "2.8.7",
+    "prettier": "2.7.1",
     "prettier-config-atomic": "^3.1.0",
     "quote-unquote": "^1.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
-    "semver": "7.4.0",
-    "setup-python": "github:actions/setup-python#v4.5.0",
+    "semver": "7.3.8",
+    "setup-python": "github:actions/setup-python#v4.6.0",
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
     "time-delta": "github:aminya/time-delta#69d91a41cef28e569be9a2991129f5f7d1f0d00e",
@@ -113,8 +113,8 @@
     "ts-readme": "^1.1.3",
     "typescript": "^5.0.4",
     "ubuntu-version": "^2.0.0",
-    "untildify-user": "workspace:1.0.0",
-    "user-access": "workspace:1.0.0",
+    "untildify-user": "workspace:*",
+    "user-access": "workspace:*",
     "which": "^3.0.0"
   },
   "engines": {
