--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup-cpp:fedora .",
     "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup-cpp:ubuntu .",
     "build.parcel": "cross-env NODE_ENV=production parcel build",
-    "bump": "ncu -u -x execa,numerous,path-exists && pnpm update",
+    "bump": "ncu -u -x numerous,path-exists && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/node12/ && shx cp ./src/msvc/msvc_matcher.json ./dist/node12/ && shx cp ./src/python/python_matcher.json ./dist/node12/ && shx cp ./src/llvm/llvm_matcher.json ./dist/node12/ && shx cp ./dist/node12/*.json ./dist/node16/",
     "dev": "cross-env NODE_ENV=development parcel watch",
@@ -83,7 +83,7 @@
     "escape-path-with-spaces": "^1.0.2",
     "escape-quotes": "^1.0.2",
     "escape-string-regexp": "^5.0.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "eslint-config-atomic": "^1.18.3",
     "exec-powershell": "workspace:*",
     "execa": "^5.1.1",
@@ -149,7 +149,6 @@
       "semver": "7.3.8",
       "eslint": "^8.28.0",
       "prettier": "2.7.1",
-      "lru-cache": "7.8.1",
       "core-js": "*",
       "babel-eslint": "npm:@babel/eslint-parser"
     },
