fix: replace npmcli/ci-detect with ci-info

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup-cpp:fedora .",
     "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup-cpp:ubuntu .",
     "build.parcel": "cross-env NODE_ENV=production parcel build",
-    "bump": "ncu -u -x numerous,path-exists && pnpm update",
+    "bump": "ncu -u -x execa,numerous,path-exists && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/node12/ && shx cp ./src/msvc/msvc_matcher.json ./dist/node12/ && shx cp ./src/python/python_matcher.json ./dist/node12/ && shx cp ./src/llvm/llvm_matcher.json ./dist/node12/ && shx cp ./dist/node12/*.json ./dist/node16/",
     "dev": "cross-env NODE_ENV=development parcel watch",
@@ -64,7 +64,6 @@
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
-    "@npmcli/ci-detect": "^3.0.2",
     "@types/cross-spawn": "^6.0.2",
     "@types/eslint": "^8.37.0",
     "@types/jest": "^29.5.1",
@@ -76,6 +75,7 @@
     "@types/which": "^3.0.0",
     "admina": "^0.1.3",
     "caxa": "^3.0.1",
+    "ci-info": "^3.8.0",
     "ci-log": "workspace:*",
     "cross-env": "7.0.3",
     "cross-spawn": "^7.0.3",
