feat: transform node_prefix using babel

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "build.docker.arch": "pnpm build && docker build -f ./dev/docker/arch_node.dockerfile -t setup-cpp:arch .",
     "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup-cpp:fedora .",
     "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup-cpp:ubuntu .",
-    "build.parcel": "cross-env NODE_ENV=production parcel build && pnpm run build.node_prefix",
-    "build.node_prefix": "node ./dev/scripts/node_prefix.mjs",
+    "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
     "bump": "ncu -u -x execa,numerous,path-exists && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/node12/ && shx cp ./src/msvc/msvc_matcher.json ./dist/node12/ && shx cp ./src/python/python_matcher.json ./dist/node12/ && shx cp ./src/llvm/llvm_matcher.json ./dist/node12/ && shx cp ./dist/node12/*.json ./dist/node16/",
@@ -65,6 +64,7 @@
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
+    "@babel/cli": "^7.21.0",
     "@npmcli/ci-detect": "^3.0.2",
     "@types/cross-spawn": "^6.0.2",
     "@types/eslint": "^8.37.0",
@@ -75,6 +75,7 @@
     "@types/prettier": "2.7.2",
     "@types/semver": "^7.3.13",
     "@types/which": "^3.0.0",
+    "@upleveled/babel-plugin-remove-node-prefix": "github:aminya/babel-plugin-remove-node-prefix#95fcbd92405b99a6eece48c493548996f12e6519",
     "admina": "^0.1.3",
     "caxa": "^3.0.1",
     "ci-log": "workspace:*",
