--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build.docker.fedora": "pnpm build && docker build -f ./dev/docker/fedora_node.dockerfile -t setup-cpp:fedora .",
     "build.docker.ubuntu": "pnpm build && docker build -f ./dev/docker/ubuntu_node.dockerfile -t setup-cpp:ubuntu .",
     "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
-    "bump": "ncu -u -x numerous,path-exists && pnpm update",
+    "bump": "ncu -u -x numerous && pnpm update",
     "clean": "shx rm -rf .parcel-cache dist exe",
     "copy.matchers": "shx cp ./src/gcc/gcc_matcher.json ./dist/node12/ && shx cp ./src/msvc/msvc_matcher.json ./dist/node12/ && shx cp ./src/python/python_matcher.json ./dist/node12/ && shx cp ./src/llvm/llvm_matcher.json ./dist/node12/ && shx cp ./dist/node12/*.json ./dist/node16/",
     "dev": "cross-env NODE_ENV=development parcel watch",
@@ -99,14 +99,14 @@
     "npm-run-all2": "^6.0.5",
     "numerous": "1.0.3",
     "parcel": "2.8.3",
-    "path-exists": "^4.0.0",
+    "path-exists": "^5.0.0",
     "patha": "^0.4.1",
-    "prettier": "2.7.1",
+    "prettier": "2.8.8",
     "prettier-config-atomic": "^3.1.0",
     "quote-unquote": "^1.0.0",
     "readme-md-generator": "^1.0.0",
     "retry-as-promised": "^7.0.4",
-    "semver": "7.3.8",
+    "semver": "7.5.0",
     "setup-python": "github:actions/setup-python#v4.6.0",
     "shx": "0.3.4",
     "terser-config-atomic": "^0.1.1",
