--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,7 +64,7 @@ jobs:
       #   uses: mxschmitt/action-tmate@v3
 
       - name: Test
-        if: "${{ !contains(github.event.head_commit.message, '[skip test]') && !matrix.skip_test }}"
+        if: "${{ !contains(github.event.head_commit.message, '[skip test]') && contains(matrix.node, '18') }}"
         run: |
           pnpm run test
 
