--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "update-notifier": "^5.1.0"
   },
   "devDependencies": {
+    "@types/resolve": "^1.20.2",
+    "resolve": "^1.22.2",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
