fix: fix all the linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,16 @@
 {
   "extends": "eslint-config-atomic",
-  "ignorePatterns": ["dist/", "node_modules/", "dev/cpp_vcpkg_project"]
+  "ignorePatterns": ["dist/", "node_modules/", "dev/cpp_vcpkg_project"],
+  "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_",
+        "destructuredArrayIgnorePattern": "^_"
+      }
+    ]
+  }
 }
