--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "allowJs": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "module": "NodeNext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "importHelpers": false,
     "outDir": "./dist"
