--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "gen-readme": "^1.6.0",
     "is-url-online": "^1.5.0",
     "jest": "^29.5.0",
+    "micro-memoize": "^4.1.2",
     "mri": "^1.2.0",
     "msvc-dev-cmd": "github:aminya/msvc-dev-cmd#9f672c1",
     "npm-check-updates": "^16.10.13",
