--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,7 @@ jobs:
           - macos-12
           - macos-11
         node:
-          - 18
+          - 20
         pnpm:
           - 8
     steps:
@@ -85,7 +85,7 @@ jobs:
           node-version: 12
       - name: Smoke Test Node 12
         run: |
-          node ./dist/node12/setup-cpp.js --help
+          node ./dist/legacy/setup-cpp.js --help
 
       - name: Setup Node 16
         uses: actions/setup-node@v3
@@ -118,11 +118,11 @@ jobs:
             ./exe/setup-cpp-x64-windows.exe
             ./exe/setup-cpp-x64-linux
             ./exe/setup-cpp-x64-macos
-            ./dist/node12/setup-cpp.js
-            ./dist/node12/setup-cpp.js.map
-            ./dist/node12/                      # TODO: deprecate node12
+            ./dist/legacy/setup-cpp.js
+            ./dist/legacy/setup-cpp.js.map
+            ./dist/legacy/
             ./dist/node16/
-            ./dist/node18/
+            ./dist/node20/
 
   Docker:
     if: ${{ !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip test]') }}
@@ -133,7 +133,7 @@ jobs:
         os:
           - ubuntu-22.04
         node:
-          - 18
+          - 20
         pnpm:
           - 8
         container:
