feat: support installing llvm via apt on Ubuntu

--- a/package.json
+++ b/package.json
@@ -151,7 +151,8 @@
   ],
   "alias": {
     "electron": false,
-    "patha": "patha/dist/index.node.mjs"
+    "patha": "patha/dist/index.node.mjs",
+    "admina": "admina/dist/index.mjs"
   },
   "pnpm": {
     "overrides": {
