--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -9,6 +9,7 @@ ignorePaths:
   - dist/
   - dev/cpp_vcpkg_project
   - "**/node_modules/"
+  - .vscode/extensions.json
 words:
   - aarch
   - clangd
