feat: add Mingw docker images and test them

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -143,6 +143,9 @@ jobs:
           - "arch.dockerfile"
           - "fedora.dockerfile"
           - "ubuntu.dockerfile"
+          - "arch-mingw.dockerfile"
+          - "fedora-mingw.dockerfile"
+          - "ubuntu-mingw.dockerfile"
     steps:
       - uses: actions/checkout@v3
         with:
