--- a/dev/docker/__tests__/arch.yml
+++ b/dev/docker/__tests__/arch.yml
@@ -1,18 +1,6 @@
 schemaVersion: 2.0.0
 
 commandTests:
-  - name: gcc compiler
-    command: gcc
-    args: ["--version"]
-    expectedOutput: [".*gcc.*GCC.*"]
-  - name: g++ compiler
-    command: g++
-    args: ["--version"]
-    expectedOutput: [".*g\\+\\+.*GCC.*"]
-  - name: make
-    command: make
-    args: ["--version"]
-    expectedOutput: [".*GNU Make.*"]
   - name: ninja
     command: /root/ninja/ninja
     args: ["--version"]
@@ -29,6 +17,10 @@ commandTests:
     command: doxygen
     args: ["--version"]
     expectedOutput: [".*1.*"]
+  - name: clang
+    command: /usr/lib/llvm-15/bin/clang
+    args: ["--version"]
+    expectedOutput: [".*clang.*"]
 
 fileExistenceTests:
   - name: "vcpkg"
