--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -140,12 +140,12 @@ jobs:
         pnpm:
           - 8
         container:
-          - "arch.dockerfile"
-          - "fedora.dockerfile"
           - "ubuntu.dockerfile"
-          - "arch-mingw.dockerfile"
-          - "fedora-mingw.dockerfile"
+          - "fedora.dockerfile"
+          - "arch.dockerfile"
           - "ubuntu-mingw.dockerfile"
+          # - "fedora-mingw.dockerfile"
+          # - "arch-mingw.dockerfile"
     steps:
       - uses: actions/checkout@v3
         with:
