--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "./src",
     "dev/scripts",
     "packages/untildify-user/untildify.ts",
-    "dev/docker/__tests__/generate-docker-tests.mjs"
+    "dev/docker/__tests__/generate-docker-tests.mjs",
+    "./jest.config.ts"
   ]
 }
