--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1",
     "@babel/cli": "^7.22.9",
+    "@swc/jest": "^0.2.27",
     "@types/cross-spawn": "^6.0.2",
     "@types/eslint": "^8.44.0",
     "@types/jest": "^29.5.3",
