--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "tsconfig.json"
   ],
   "scripts": {
-    "build": "shx rm -rf dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern && run-p lint.tsc build.parcel copy.matchers",
+    "build": "run-s clean build.packages && run-p lint.tsc build.parcel copy.matchers",
+    "build.packages": "pnpm run -r build",
     "build.parcel": "cross-env NODE_ENV=production parcel build && babel ./dist --out-dir dist --plugins @upleveled/babel-plugin-remove-node-prefix --compact --no-babelrc --source-maps true",
     "bump": "ncu -u -x numerous && pnpm update",
-    "clean": "shx rm -rf .parcel-cache dist exe",
+    "clean": "shx rm -rf ./dist ./exe ./packages/*/dist/ && shx mkdir -p ./dist/legacy ./dist/actions ./dist/modern ",
     "copy.matchers": "run-p copy.matchers.legacy copy.matchers.actions copy.matchers.modern",
     "copy.matchers.legacy": "shx cp ./src/gcc/gcc_matcher.json ./dist/legacy/ && shx cp ./src/msvc/msvc_matcher.json ./dist/legacy/ && shx cp ./src/python/python_matcher.json ./dist/legacy/ && shx cp ./src/llvm/llvm_matcher.json ./dist/legacy/",
     "copy.matchers.actions": "shx cp ./src/gcc/gcc_matcher.json ./dist/actions/ && shx cp ./src/msvc/msvc_matcher.json ./dist/actions/ && shx cp ./src/python/python_matcher.json ./dist/actions/ && shx cp ./src/llvm/llvm_matcher.json ./dist/actions/",
@@ -45,7 +46,7 @@
     "lint.prettier": "prettier --list-different --write .",
     "lint.tsc": "tsc --noEmit",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
-    "prepare": "pnpm run -r build && pnpm run -w build && rm ./dist/tsconfig.tsbuildinfo",
+    "prepublishOnly": "rm ./dist/tsconfig.tsbuildinfo",
     "start.docker": "docker run -t setup-cpp .",
     "start.docker.arch": "docker run -t setup-cpp:arch .",
     "start.docker.fedora": "docker run -t setup-cpp:fedora .",
